--- a/style.css
+++ b/style.css
@@ -15,7 +15,6 @@ a {
 .content {
   margin: 3% auto;
   padding: 10px;
-  padding-top: 45px;
   background: rgba(255, 255, 255, 0.9);
 }
 
@@ -25,7 +24,8 @@ a {
 }
 
 #icons {
-   font-size: 36px;
+  margin-top: 10px;
+  font-size: 30px;
 }
 
 .navbar {
