--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 :root {
-  --accent-color: rgb(0, 75, 225);
+  --accent-color: rgb(0, 25, 225);
 }
 
 @keyframes fadeIn {from {opacity: 0;} to {opacity: 1;}}
@@ -16,7 +16,7 @@ body {
 
 #main {
   margin: 0 auto;
-  max-width: 80%;
+  max-width: 75vw;
   border-radius: 10px;
   background:rgba(100, 190, 35, 0.3);
   animation: fadeIn ease-in 500ms;
@@ -39,22 +39,22 @@ img {
 }
 
 nav {
-  padding: 10px 5vw;
-  width: 90vw;
+  width: 100%;
+  padding: 10px 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background:rgba(100, 190, 35, 0.4);
+  background:rgba(100, 190, 35, 0.3);
 }
 
 button {
-  padding: 15px;
+  padding: 12px;
   text-transform: uppercase;
   font-weight: bold;
-  background: none;
+  background: rgba(180, 180, 180, 0.2);
   color: var(--accent-color);
   font-size: 16px;
-  border: 2px solid var(--accent-color);
+  border: 3px solid var(--accent-color);
   margin: 0 3px;
 }
 
@@ -71,19 +71,27 @@ button {
   animation: fadeIn ease-in 350ms;
 }
 
+.header {
+  margin: 0 2vw;
+}
+
 .projects {
   justify-content: space-around
 }
 
-.icons {
-  margin: 0 10px;
-  padding-bottom: 10px;
-  font-size: 40px;
+.icon {
+  margin: 0 2vw;
+  font-size: 30px;
   color: var(--accent-color);
 }
 
+.icon :hover {
+  color: rgba(0, 75, 225);
+}
+
 #headShot {
-  width: 300px;
+  width: 80%;
+  max-width: 350px;
 }
 
 #aboutText {
