--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,12 @@
 :root {
-  --accent-color: rgb(0, 25, 225);
+  --accent-color: rgb(50, 50, 200);
 }
 
 @keyframes fadeIn {from {opacity: 0;} to {opacity: 1;}}
 
 body {
   background: rgb(97, 144, 232);
-  background: linear-gradient(130deg, rgba(11,100,225,0.9) 0%, rgba(9,121,84,0.9) 55%, rgba(0,212,255,0.9) 95%);
+  background: linear-gradient(130deg, rgb(11,100,225) 50%, rgb(9,121,84) 50%);
   margin: 0 auto;
   text-align: center;
   font-family: Lato;
@@ -16,10 +16,15 @@ body {
 
 #main {
   margin: 0 auto;
-  max-width: 75vw;
+  max-width: 85vw;
   border-radius: 10px;
-  background:rgba(100, 190, 35, 0.3);
+  background: rgba(0,0,0,0.6);
   animation: fadeIn ease-in 500ms;
+}
+
+#frost {
+  background:rgba(125, 200, 100, 0.7);
+  border-radius: inherit;
 }
 
 p {
@@ -29,8 +34,9 @@ p {
 
 a {
   color: var(--accent-color);
+  font-weight: 600;
   text-decoration: none;
-  font-size: 18px;
+  font-size: 1.2em;
 }
 
 img {
@@ -44,23 +50,27 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background:rgba(100, 190, 35, 0.3);
+  background:rgb(90, 170, 30);
 }
 
 button {
   padding: 12px;
   text-transform: uppercase;
-  font-weight: bold;
-  background: rgba(180, 180, 180, 0.2);
+  font-weight: 600;
+  background: rgba(190, 190, 190, 0.45);
   color: var(--accent-color);
-  font-size: 16px;
+  font-size: 1.2em;
   border: 3px solid var(--accent-color);
   margin: 0 3px;
 }
 
 .card {
-  width: 350px;
-  padding-bottom: 10px;
+  width: 30%;
+  min-width: 350px;
+  padding: 10px 5px;
+  margin: 10px 0;
+  border-radius: 5px;
+  background: rgba(180, 180, 180, 0.3);
 }
 
 .container {
@@ -86,23 +96,36 @@ button {
 }
 
 .icon :hover {
-  color: rgba(0, 75, 225);
+  color: rgba(75, 75, 200);
 }
 
 #headShot {
-  width: 80%;
+  width: 25vw;
   max-width: 350px;
+  min-width: 200px;
 }
 
 #aboutText {
   text-align: left;
   padding: 0 10px;
-  font-size: 1.9em;
-  max-width: 70%;
+  font-size: 1.85em;
+  max-width: 85%;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 800px) {
   nav {
     flex-direction: column;
+  }
+  #aboutText {
+    font-size: 1.7em;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  #headShot {
+    max-width: 325px;
+  }
+  #aboutText {
+    max-width: 65%;
   }
 }
