--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
+
 :root {
   --accent-color: rgb(50, 50, 200);
 }
@@ -88,19 +90,17 @@ button {
 }
 
 .projects {
-  justify-content: space-around
+  justify-content: space-around;
 }
 
 .card {
   width: 30%;
-  min-width: 350px;
+  min-width: 325px;
   padding: 10px 5px;
-  margin: 10px 0;
+  margin: 5px 0;
   border-radius: 5px;
   background: rgba(180, 180, 180, 0.3);
 }
-
-
 
 #headShot {
   width: 25vw;
